--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "codemirror": "^5.51.0",
     "electron-serve": "^0.4.1",
     "electron-store": "^5.1.0"
   },
@@ -29,5 +30,6 @@
     "typeface-roboto": "^0.0.75",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.5"
-  }
+  },
+  "license": "MIT"
 }
